# MCPServer

./: README.md  config.ini
MCPEnvironment/: output.docx  script.py
src/: README_AUDIO_VIDEO.md  client.py  enhanced_video_client.py  final_enhanced_demo.py  multimodal_model.py  pyproject.toml  server.py  simple_audio_video_recorder.py  video_processor.py
