[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.10.2",
    "llama-index>=0.13.2",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-tools-mcp>=0.4.0",
    "mcp[cli]>=1.10.1",
    "ollama>=0.5.3",
    "openai>=1.96.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "accelerate>=0.24.0",
]
